Kleine Korrekturen am Rätsel 2016

--- a/raetsel/2016.md
+++ b/raetsel/2016.md
@@ -17,13 +17,13 @@ b) Bestimme die Primfaktoren von 2016, also durch welches Produkt von [Primzahle
 > Beispiel: die Primfaktoren von 42 sind 2, 3, 7 (2 \* 3 \* 7 = 42)  
 > Weitere Infos: https://de.wikipedia.org/wiki/Primfaktorzerlegung
 
-c) Füge in die linke Seite der untenstehende Gleichung die Operatoren +, -, \*, / sowie falls nötig Klammern ein, so dass sie erfüllt ist.  
+c) Füge in die linke Seite der untenstehende Gleichung die Operatoren +, -, \*, / sowie falls nötig Klammern ein, so dass sie erfüllt ist. Verwende jeden Operator mindestens einmal.
 > 10 9 8 7 6 5 4 3 2 1 = 2016
 
 d) Knobelaufgabe (Schwierig): Versuche in der Aufgabe c) mit möglichst wenigen Zeichen auszukommen.  
 > Hinweis: Die kleinste Anzahl von Zeichen der linken Seite der Gleichung ist 22.
 
-e) Schwierig: Wähle eine Zahl von 1 bis 9 und stelle eine Gleichung auf in der du nur diese Zahl verwendest um 2016 zu erhalten. Du darfst beliebige Rechnoperationen verwenden.  
+e) Schwierig: Wähle eine Zahl von 1 bis 9 und stelle eine Gleichung auf in der du nur diese Zahl verwendest um 2016 zu erhalten. Du darfst beliebige Rechenoperationen verwenden.  
 > Beispiel für die Zahl 2013: Wähle 3. (3+3+3)\*(3+3)^3+3^3+3^3+3\*3+3+3=2013
 
 f) Knobelaufgabe (Schwierig): Probiere eine möglichst kurze Lösung der Aufgabe e) zu finden.
