--- a/raetsel/2016.md
+++ b/raetsel/2016.md
@@ -17,7 +17,7 @@ b) Bestimme die Primfaktoren von 2016, also durch welches Produkt von [Primzahle
 > Beispiel: die Primfaktoren von 42 sind 2, 3, 7 (2 \* 3 \* 7 = 42)  
 > Weitere Infos: https://de.wikipedia.org/wiki/Primfaktorzerlegung
 
-c) Füge in die linke Seite der untenstehende Gleichung die Operatoren +, -, \*, / sowie falls nötig Klammern ein, so dass sie erfüllt ist. Verwende jeden Operator mindestens einmal.
+c) Füge in die linke Seite der untenstehende Gleichung die Operatoren +, -, \*, / sowie falls nötig Klammern ein, so dass sie erfüllt ist. Verwende jeden Operator mindestens einmal. Ein zusammenfassen der Zahlen z.B. 7 6 zu 76 ist nicht erlaubt.
 > 10 9 8 7 6 5 4 3 2 1 = 2016
 
 d) Knobelaufgabe (Schwierig): Versuche in der Aufgabe c) mit möglichst wenigen Zeichen auszukommen.  
